Resolving issues with teacup process section on tablet

--- a/source/scss/components/_section.sass
+++ b/source/scss/components/_section.sass
@@ -360,7 +360,7 @@
                 +process__image--box-shadow
                 +lt(1280px)
                   max-width: 80%
-                  max-height: 26vh
+                  max-height: 21vw
                 +lt($global-screen-size-medium)
                   width: 100%
                   height: 46.666666666666664vw
