--- a/source/scss/views/_teacup.sass
+++ b/source/scss/views/_teacup.sass
@@ -78,10 +78,12 @@ $custom-elements: 5
           width: 983px
           height: 486px
           left: unset
-          right: -50%
+          right: -490px
           top: 50%
           margin-top: -243px
           z-index: 4
+          +xl
+            right: -5%
           +lt($global-screen-size-medium)
             display: none
 
