--- a/static/style.css
+++ b/static/style.css
@@ -4571,7 +4571,7 @@ input[type="button"]:active {
 @media only screen and (max-width: 1280px) {
   .section--process .section__phases__phase--discovery .background-images__image, .section--process .section__phases__phase--information-architecture .background-images__image, .section--process .section__phases__phase--creative-direction .background-images__image, .section--process .section__phases__phase--project-management .background-images__image, .section--process .section__phases__phase--software-development .background-images__image, .section--process .section__phases__phase--frontend-engineering .background-images__image {
     max-width: 80%;
-    max-height: 26vh;
+    max-height: 21vw;
   }
 }
 
@@ -6022,10 +6022,16 @@ input[type="button"]:active {
   width: 983px;
   height: 486px;
   left: unset;
-  right: -50%;
+  right: -490px;
   top: 50%;
   margin-top: -243px;
   z-index: 4;
+}
+
+@media only screen and (min-width: 1440px) {
+  .teacup-analytics .section .section__element--4 {
+    right: -5%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
